# FinalProject_3307_AitkenMajor

./: README.md
Libraries/include/GL/: nuss_matrix.h  nuss_vector.h
T8/: CMakeLists.txt  main.cpp
T8/include/: camera.h  fetchInput.h
T8/resource/: shaderGouraud.frag  shaderGouraud.vert  shaderPhong.frag  shaderPhong.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  sun.frag  sun.vert  textureShader.frag  waterShader.frag  waterShader.vert
T8/src/: camera.cpp  fetchInput.cpp
